# scorbot

./: README.md
cad/: base.SLDPRT  body.SLDPRT  flange.SLDPRT  forearm.SLDPRT  gripper.SLDASM  gripper.SLDPRT  gripper2.SLDPRT  gripper_base.SLDPRT  gripper_finger.SLDPRT  scorbot_er_vii.SLDASM  scorbot_texture.p2m  upper_arm.SLDPRT
electronics/: .gitignore
electronics/lem_current_sensor/: eagle.epf  lem_current_sensor.brd  lem_current_sensor.sch
electronics/scorbot_jcb/: eagle.epf  scorbot_jcb.brd  scorbot_jcb.sch  xmc_4800_pins.txt
electronics/spi_current_sensor/: eagle.epf  spi_current_sensor.brd  spi_current_sensor.sch
embedded/Arduino/TLI4970/: TLI4970.ino  notes.txt
matlab/: controller_config.txt  current_10khz.mat  encoder_to_speed.m  model2.slx  model_open_loop_test.slx  motor_code.m  motor_constants_9434.m  motor_model.slx  motor_params.m  plot_results.m  plot_results_current.m  scorbot_figures.m  scorbot_test.mat  speed_observer.m  speed_test.m  sym_controller.m
matlab/misc/: current_1khz.mat  current_base.mat  current_limitation_02.mat  current_step.mat  model_open_loop_test.slx  motor_current.slx  speed_observer.m  test_pid.slx
matlab/motor_9413/: current_controller.mat  current_probe_calibration.mat  model.slx  motor_9413.m  p1.mat  p2.mat  p3.mat  pittman_9413.m  stall_data.mat
matlab/motor_9434/: model.slx  motor_9434.m  motor_constants_9434.m  p1.mat  p2.mat  p3.mat
matlab/motor_model_v2/: motor_code.m  motor_model.slx
matlab/scorbot_data/: result_base_joint.mat  scorbot_test.mat
ros/: README.md
ros/scorbot_description/: CMakeLists.txt  README.md  package.xml
ros/scorbot_description/config/: urdf.rviz
ros/scorbot_description/launch/: display.launch  load_robot_description.launch  shadow.launch
ros/scorbot_description/meshes/: base.dae  body.dae  flange.dae  forearm.dae  gripper_base.dae  gripper_finger.dae  upper_arm.dae
ros/scorbot_description/robots/: scorbot.urdf  scorbot.urdf.xacro  scorbot_pos.urdf.xacro
ros/scorbot_description/scripts/: generate_models.sh
ros/scorbot_description/urdf/: common.xacro  gazebo.urdf.xacro  materials.urdf.xacro
ros/scorbot_driver/: CMakeLists.txt  package.xml
ros/scorbot_driver/cfg/: Parameters.cfg  ScorbotJointParameters.cfg
ros/scorbot_driver/cmake/Modules/: FindSoem.cmake
ros/scorbot_driver/config/: basic.rviz  controllers.yaml  scorbot.perspective
ros/scorbot_driver/include/scorbot_driver/: ethercat_driver.h  ethercat_interface.h  scorbot_control_loop.h  scorbot_hardware_interface.h  scorbot_joint_driver.h
ros/scorbot_driver/launch/: scorbot.launch
ros/scorbot_driver/scripts/: ethercat_permission.sh
ros/scorbot_driver/src/: ethercat_interface.cpp  scorbot_control_hw.cpp  scorbot_control_loop.cpp  scorbot_hardware_interface.cpp  scorbot_joint_driver.cpp  test_scorbot.c
ros/scorbot_gazebo/: CMakeLists.txt  package.xml
ros/scorbot_gazebo/config/: controllers.yaml  effort_controllers.yaml  position_controllers.yaml  trajectory_controllers.yaml
ros/scorbot_gazebo/launch/: scorbot.launch  scorbot_effort.launch  scorbot_pos.launch
ros/scorbot_haptic_teleop/: CMakeLists.txt  README.md  package.xml
ros/scorbot_haptic_teleop/cfg/: HapticProxyParameters.cfg
ros/scorbot_haptic_teleop/config/: haptic_marker_omni_test.rviz  haptic_marker_test.rviz  proxy_parameters.perspective  teleop.rviz
ros/scorbot_haptic_teleop/doc/: phantom_install.md
ros/scorbot_haptic_teleop/include/scorbot_haptic_teleop/: haptic_proxy.h  haptic_proxy_marker.h  haptic_proxy_reconfigure.h  shape_sampler.h
ros/scorbot_haptic_teleop/launch/: haptic_marker_omni_test.launch  haptic_marker_test.launch  scorbot.launch  scorbot_shadow.launch
ros/scorbot_haptic_teleop/scripts/: target_marker.py
ros/scorbot_haptic_teleop/src/: haptic_proxy.cpp  haptic_proxy_marker.cpp  haptic_proxy_reconfigure.cpp  haptic_proxy_test.cpp  haptic_proxy_test_tf.cpp  haptic_teleop.cpp  haptic_teleop_point_cloud.cpp  original_algorithm.cpp  point_cloud_helper.cpp  proxy_calculations.cpp  shape_sampler.cpp
ros/scorbot_haptic_teleop/src/scorbot_haptic_teleop/: tf_marker.py
ros/scorbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros/scorbot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  scorbot.srdf  scorbot_controllers.yaml  scorbot_moveit.launch.rviz  scorbot_moveit.rviz
ros/scorbot_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  scorbot_moveit.launch  scorbot_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
