<?xml version="1.0"?>
<package>
  <name>scorbot_driver</name>
  <version>0.0.0</version>
  <description>The scorbot_driver package</description>

  <maintainer email="rodrigo@todo.todo">rodrigo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>control_toolbox</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>control_toolbox</run_depend>

  <export>
  </export>

</package>